fix(cli): replace Files.readString (JDK11+) with Files.readAllBytes (JDK7+) for JitPack compatibility